minio-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtualservice
  namespace: default
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /minio/
    rewrite:
      uri: /
    route:
    - destination:
        host: minio-service.kubeflow.svc.cluster.local
        port:
          number: 9000
    timeout: 300s
